tests/sealed_tvars/sealed_tvars.exp
Error -------------------------------------------------------------------------------------------- error_examples.js:4:7

Internal error: unconstrained tvar (4100) during tvar resolution

   4| class C { }
            ^



Found 1 error
